--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@
 /* BASE STYLES
 /*******************************************/
 
+body {
+    margin: 0;
+}
+
 body,
 a {
     color: var(--clr-font-primary);
@@ -142,7 +146,6 @@ header {
     position: fixed;
     width: 100%;
     top: 0;
-    padding-right: 1rem;
     z-index: 1;
 }
 
@@ -438,7 +441,7 @@ div .overlay {
     .nav-menu.active {
         left: 0;
         padding-left: 0;
-        padding-bottom: 0.05rem;
+        padding-bottom: 0.43rem;
     }
 
     #products,
